--- a/index.html
+++ b/index.html
@@ -1,48 +1,105 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
-    crossorigin="anonymous">
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script> 
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
-  crossorigin="anonymous"> 
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
+    crossorigin="anonymous">
+  <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script> -->
+  <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
+  <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
+    crossorigin="anonymous"> -->
   <link rel="stylesheet" href="style.css">
-<title>Stock Search</title>    
+  <title>Stock Search</title>
 </head>
 
 <body>
-  <div class="container">
-    <h1>Stock Search</h1>
-
-    <div id="stocks-view"></div>
-
-    <div id="buttons-view"></div>
-
-    <form id="stock-form">
-      <label for="stock-input">Add a Stock Symbol</label>
-      <input type="text" id="stock-input">
-      <br>
-
-      <input id="add-stock" type="submit" value="Submit">
-    </form>
-
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="app.js"></script>
+  <!-- Header  -->
+  <div class="jumbotron">
+    <div class="container">
+      <h1>Stock Searcher</h1>
+    </div>
   </div>
+  <!-- Buttons  -->
+  <div class="row">
+    <div class="container">
+      <div class="col-md-12">
+        <div id="stockButtonsView" class="buttonsView">
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Main Container  -->
+  <div class="row">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <form id="stock-form" role="form">
+            <h2>
+              <legend>Stock Submission</legend>
+            </h2>
+            <div class="form-group">
+              <label for="stock-input">Enter a Stock Symbol You Have Validated</label>
+              <br>
+              <input type="text" id="stock-input">
+            </div>
+            <input id="addStock" type="submit" value="Add Your Stock" class="btn btn-primary">
+          </form>
+        </div>
+        <div class="col-md-6">
+          <form id="valid-form" role="form">
+            <h2>
+              <legend>Stock Validation</legend>
+            </h2>
+            <div class="form-group">
+              <label for="valid-input">Enter a Stock Symbol for Validation</label>
+              <br>
+              <input type="text" id="valid-input">
+            </div>
+            <input id="validStock" type="submit" value="Check Symbol Existence" class="btn btn-primary">
+          </form>
+        </div>
+      </div>
+      <!-- <div class="col-md-5"></div> -->
+      <!-- Gifs  -->
+      <div class="row display-div">
+        <div class="col-md-6 stockView" id="stockView">
+        </div>
+        <div class="col-md-6 newsView" id="newsView"></div>
+      </div>
+    </div>
+  </div>
+  <!-- Stocks Submission Form  -->
+  <!-- <div class="row">
+      <div class="container container2">
+        <div class="col-md-5">
+        <form id="stock-form" role="form">
+          <h2>
+            <legend>Stock Submission</legend>
+          </h2>
+          <div class="form-group">
+            <label for="stock-input">Enter a Stock Symbol You Are Familiar With</label>
+            <input type="text" id="stock-input">
+          </div>
+          <input id="addStock" type="submit" value="Add Your Stock" class="btn btn-primary">
+        </form>
+      </div>
+    </div>
+    </div> -->
+
+  <div class="footer">
+
+  </div>
+
+
+
+
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="app.js"></script>
+
 </body>
- 
-    
 
-
-
-
-
-
-</body>
 </html>
