--- a/index.html
+++ b/index.html
@@ -38,19 +38,6 @@
         <div class="col-md-6">
           <form id="stock-form" role="form">
             <h2>
-              <legend>Stock Submission</legend>
-            </h2>
-            <div class="form-group">
-              <label for="stock-input">Enter a Stock Symbol You Have Validated</label>
-              <br>
-              <input type="text" id="stock-input">
-            </div>
-            <input id="addStock" type="submit" value="Add Your Stock" class="btn btn-primary">
-          </form>
-        </div>
-        <div class="col-md-6">
-          <form id="valid-form" role="form">
-            <h2>
               <legend>Stock Validation</legend>
             </h2>
             <div class="form-group">
@@ -61,41 +48,30 @@
             <input id="validStock" type="submit" value="Check Symbol Existence" class="btn btn-primary">
           </form>
         </div>
-      </div>
-      <!-- <div class="col-md-5"></div> -->
-      <!-- Gifs  -->
-      <div class="row display-div">
-        <div class="col-md-6 stockView" id="stockView">
+        <div class="col-md-6">
+          <form id="valid-form" role="form">
+            <h2>
+              <legend>Stock Submission</legend>
+            </h2>
+            <div class="form-group">
+              <label for="stock-input">Enter a Stock Symbol You Have Validated </label>
+              <br>
+              <input type="text" id="stock-input">
+            </div>
+            <input id="addStock" type="submit" value="Add Your Stock" class="btn btn-primary">
+          </form>
         </div>
+      </div>
+
+      <div class="row display-div">
+        <div class="col-md-6 stockView" id="stockView"></div>
         <div class="col-md-6 newsView" id="newsView"></div>
       </div>
     </div>
   </div>
-  <!-- Stocks Submission Form  -->
-  <!-- <div class="row">
-      <div class="container container2">
-        <div class="col-md-5">
-        <form id="stock-form" role="form">
-          <h2>
-            <legend>Stock Submission</legend>
-          </h2>
-          <div class="form-group">
-            <label for="stock-input">Enter a Stock Symbol You Are Familiar With</label>
-            <input type="text" id="stock-input">
-          </div>
-          <input id="addStock" type="submit" value="Add Your Stock" class="btn btn-primary">
-        </form>
-      </div>
-    </div>
-    </div> -->
 
-  <div class="footer">
 
   </div>
-
-
-
-
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="app.js"></script>
